# jllm

./: .gitignore  README.md  build.sh  jllm  pom.xml
examples/plugins/echo-tool/: EchoTool.java  build.sh
examples/plugins/logging-interceptor/: LoggingInterceptor.java
native/: CMakeLists.txt  build.sh  llama_jni.cpp
src/main/java/dev/localllm/: Main.java
src/main/java/dev/localllm/jni/: LlamaContext.java  LlamaDemo.java  LlamaModel.java  LlamaNative.java  NativeCleaner.java  NativeCrashException.java  NativeLibraryLoader.java  NativeLogBridge.java
src/main/java/dev/localllm/model/: JllmfileParser.java  ModelConfig.java  ModelRegistry.java  Modelfile.java
src/main/java/dev/localllm/plugin/: LlmTool.java  PluginManager.java  PromptInterceptor.java
src/main/java/dev/localllm/runner/: ModelRunner.java
src/main/java/dev/localllm/server/: ApiServer.java
src/main/resources/: logback.xml
